RESOLVED FIXED281166
[visionOS] WebKit incorrectly disables some SDK-aligned behaviors in apps linked against 2024-era SDKs
https://bugs.webkit.org/show_bug.cgi?id=281166
Summary [visionOS] WebKit incorrectly disables some SDK-aligned behaviors in apps lin...
Andy Estes
Reported 2024-10-09 14:37:07 PDT
SSIA
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-09 14:37:18 PDT
Andy Estes
Comment 2 2024-10-09 14:49:44 PDT
EWS
Comment 3 2024-10-09 17:15:57 PDT
Committed 284936@main (5c4f26d0f516): <https://commits.webkit.org/284936@main> Reviewed commits have been landed. Closing PR #34929 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.